# DartkitOS

./: README.md  configuration.nix  flake.nix  overlays.nix  release.config.cjs  sd-image.nix
.github/: ruleset-main.json
.github/workflows/: build-and-push-closure.yml  ci.yml  release.yml  version-tag.yml
button-handler/: Cargo.toml
button-handler/src/: button.rs  main.rs
captive_portal/: analysis_options.yaml  flake.nix  pubspec.yaml
captive_portal/android/app/: build.gradle.kts
captive_portal/ios/Runner/: Info.plist
captive_portal/ios/Runner.xcodeproj/: project.pbxproj
captive_portal/lib/: config.dart  main.dart
captive_portal/lib/models/: network.dart
captive_portal/lib/services/: wifi_connect_api.dart
captive_portal/linux/: CMakeLists.txt
captive_portal/web/: index.html  manifest.json
captive_portal/windows/: CMakeLists.txt
configurations/: dev.nix  prod.nix  rpi4-dev.nix  rpi4-prod.nix  rpi5-dev.nix  rpi5-prod.nix
docs/: nix-conventions.md
docs/specs/: device-setup.md
gpio-handlers/: Cargo.toml
gpio-handlers/src/: led.rs  lib.rs
modules/: autodarts.nix  button-handler.nix  dartkitos-base.nix  default.nix  gpio-handlers.nix  ota-update.nix  rpi4.nix  rpi5.nix  sd-image.nix  wifi-connect.nix  wifi-setup.nix
modules/flake/: devshells.nix  nixpkgs.nix
modules/system/: _networking.nix  _nix.nix  _services.nix  _system.nix  dartkitos-system.nix  default.nix  networking.nix  nix.nix  services.nix  system.nix
pkgs/: autodarts.nix  button-handler.nix  dartkitos-system.nix  dartkitos-update.nix  gpio-handlers.nix  wifi-connect.nix
(+10 files in other folders)
