[package]
name = "gpio-handlers"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
gpiocdev = { version = "0.8.0", features = ["async_tokio"] }
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "time", "signal"] }

[[bin]]
name = "button-handler"
path = "src/bin/button-handler.rs"

[[bin]]
name = "led-handler"
path = "src/bin/led-handler.rs"
